# leetml

./: Cargo.toml  nn_model_with_activations_and_dropout.json
src/: build.rs  datasets.rs  lib.rs  main.rs  preprocessing.rs
src/models/: decision_tree_regressor.rs  kmeans.rs  knn_regressor.rs  linear_regression.rs  logistic_regression.rs  mod.rs  random_forest_regressor.rs  ridge_regression.rs  utils.rs
src/nlp/: mod.rs  nlp.rs
src/nlp/llm/: config.json  huggingface.rs
src/nn/: activation.rs  cnn.rs  layers.rs  mod.rs  nn.rs  optimizers.rs  schedulers.rs
