[package]
name = "leetml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
ndarray-rand = "0.14.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_derive = "1.0.201"
